---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF007 [*] Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
  --> RUF007.py:16:1
   |
15 | # Errors
16 | zip(input, input[1:])
   | ^^^
17 | zip(input, input[1::1])
18 | zip(input[:-1], input[1:])
   |
help: Replace `zip()` with `itertools.pairwise()`
   |
 1 + import itertools
 2 | input = [1, 2, 3]
 3 | otherInput = [2, 3, 4]
 …
16 | # Errors
17 + itertools.pairwise(input)
   |
note: This is an unsafe fix and may change runtime behavior

RUF007 [*] Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
  --> RUF007.py:17:1
   |
15 | # Errors
16 | zip(input, input[1:])
17 | zip(input, input[1::1])
   | ^^^
18 | zip(input[:-1], input[1:])
19 | zip(input[1:], input[2:])
   |
help: Replace `zip()` with `itertools.pairwise()`
   |
 1 + import itertools
 2 | input = [1, 2, 3]
 3 | otherInput = [2, 3, 4]
 …
17 | zip(input, input[1:])
18 + itertools.pairwise(input)
   |
note: This is an unsafe fix and may change runtime behavior

RUF007 [*] Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
  --> RUF007.py:18:1
   |
16 | zip(input, input[1:])
17 | zip(input, input[1::1])
18 | zip(input[:-1], input[1:])
   | ^^^
19 | zip(input[1:], input[2:])
20 | zip(input[1:-1], input[2:])
   |
help: Replace `zip()` with `itertools.pairwise()`
   |
 1 + import itertools
 2 | input = [1, 2, 3]
 3 | otherInput = [2, 3, 4]
 …
18 | zip(input, input[1::1])
19 + itertools.pairwise(input)
   |
note: This is an unsafe fix and may change runtime behavior

RUF007 [*] Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
  --> RUF007.py:19:1
   |
17 | zip(input, input[1::1])
18 | zip(input[:-1], input[1:])
19 | zip(input[1:], input[2:])
   | ^^^
20 | zip(input[1:-1], input[2:])
21 | list(zip(input, input[1:]))
   |
help: Replace `zip()` with `itertools.pairwise()`
   |
 1 + import itertools
 2 | input = [1, 2, 3]
 3 | otherInput = [2, 3, 4]
 …
19 | zip(input[:-1], input[1:])
20 + itertools.pairwise(input)
   |
note: This is an unsafe fix and may change runtime behavior

RUF007 [*] Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
  --> RUF007.py:20:1
   |
18 | zip(input[:-1], input[1:])
19 | zip(input[1:], input[2:])
20 | zip(input[1:-1], input[2:])
   | ^^^
21 | list(zip(input, input[1:]))
22 | list(zip(input[:-1], input[1:]))
   |
help: Replace `zip()` with `itertools.pairwise()`
   |
 1 + import itertools
 2 | input = [1, 2, 3]
 3 | otherInput = [2, 3, 4]
 …
20 | zip(input[1:], input[2:])
21 + itertools.pairwise(input)
   |
note: This is an unsafe fix and may change runtime behavior

RUF007 [*] Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
  --> RUF007.py:21:6
   |
19 | zip(input[1:], input[2:])
20 | zip(input[1:-1], input[2:])
21 | list(zip(input, input[1:]))
   |      ^^^
22 | list(zip(input[:-1], input[1:]))
23 | zip(foo[:-1], foo[1:], strict=True)
   |
help: Replace `zip()` with `itertools.pairwise()`
   |
 1 + import itertools
 2 | input = [1, 2, 3]
 3 | otherInput = [2, 3, 4]
 …
21 | zip(input[1:-1], input[2:])
22 ~ list(itertools.pairwise(input))
   |
note: This is an unsafe fix and may change runtime behavior

RUF007 [*] Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
  --> RUF007.py:22:6
   |
20 | zip(input[1:-1], input[2:])
21 | list(zip(input, input[1:]))
22 | list(zip(input[:-1], input[1:]))
   |      ^^^
23 | zip(foo[:-1], foo[1:], strict=True)
24 | zip(foo[:-1], foo[1:], strict=False)
   |
help: Replace `zip()` with `itertools.pairwise()`
   |
 1 + import itertools
 2 | input = [1, 2, 3]
 3 | otherInput = [2, 3, 4]
 …
22 | list(zip(input, input[1:]))
23 ~ list(itertools.pairwise(input))
   |
note: This is an unsafe fix and may change runtime behavior

RUF007 [*] Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
  --> RUF007.py:23:1
   |
21 | list(zip(input, input[1:]))
22 | list(zip(input[:-1], input[1:]))
23 | zip(foo[:-1], foo[1:], strict=True)
   | ^^^
24 | zip(foo[:-1], foo[1:], strict=False)
25 | zip(foo[:-1], foo[1:], strict=bool(foo))
   |
help: Replace `zip()` with `itertools.pairwise()`
   |
 1 + import itertools
 2 | input = [1, 2, 3]
 3 | otherInput = [2, 3, 4]
 …
23 | list(zip(input[:-1], input[1:]))
24 + itertools.pairwise(foo)
   |
note: This is an unsafe fix and may change runtime behavior

RUF007 [*] Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
  --> RUF007.py:24:1
   |
22 | list(zip(input[:-1], input[1:]))
23 | zip(foo[:-1], foo[1:], strict=True)
24 | zip(foo[:-1], foo[1:], strict=False)
   | ^^^
25 | zip(foo[:-1], foo[1:], strict=bool(foo))
   |
help: Replace `zip()` with `itertools.pairwise()`
   |
 1 + import itertools
 2 | input = [1, 2, 3]
 3 | otherInput = [2, 3, 4]
 …
24 | zip(foo[:-1], foo[1:], strict=True)
25 + itertools.pairwise(foo)
   |
note: This is an unsafe fix and may change runtime behavior

RUF007 [*] Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
  --> RUF007.py:25:1
   |
23 | zip(foo[:-1], foo[1:], strict=True)
24 | zip(foo[:-1], foo[1:], strict=False)
25 | zip(foo[:-1], foo[1:], strict=bool(foo))
   | ^^^
help: Replace `zip()` with `itertools.pairwise()`
   |
 1 + import itertools
 2 | input = [1, 2, 3]
 3 | otherInput = [2, 3, 4]
 …
25 | zip(foo[:-1], foo[1:], strict=False)
26 + itertools.pairwise(foo)
   |
note: This is an unsafe fix and may change runtime behavior
